New email and lastest discovery folder

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,30 +25,52 @@
   <div class="nhsuk-grid-row">
       <h1>Provisioning</h1>
 
-    <div class="nhsuk-grid-column-three-quarters">
+      <div class="nhsuk-grid-column-three-quarters">
+
+        <div class="nhsuk-card">
+          <div class="nhsuk-card__content">
+            <h3 class="nhsuk-card__heading">
+              Discovery 2023
+            </h3>
+            <a class="nhsuk-contents-list__link" href="universalinterface/index">Universal interface</a> - which allows trusted parties to create and ammend NHS login accounts via an API.
+          </div>
+        </div>
+
+        <div class="nhsuk-card">
+          <div class="nhsuk-card__content">
+            <h3 class="nhsuk-card__heading">
+              Previous work
+            </h3>
+            <p>Provisioning is split into two sections:</p>
+          <nav class="nhsuk-contents-list" role="navigation" aria-label="Pages in this guide">
+            <h2 class="nhsuk-u-visually-hidden">Provisioning</h2>
+            <ol class="nhsuk-contents-list__list">
+              <li class="nhsuk-contents-list__item">
+                <a class="nhsuk-contents-list__link" href="universalinterface/index">Universal interface</a> - which allows trusted parties to create and ammend NHS login accounts via an API.
+              </li>
+              <li class="nhsuk-contents-list__item">
+                <a class="nhsuk-contents-list__link" href="createaccount/index">Create account</a> - which allows a user to claim an NHS login account created through the above interface.
+              </li>
+            </ol>
+          </nav>
+        </div>
+
+        <div class="nhsuk-grid-column-one-quarter">
+            <ul>
+              <li><a href="https://jira.digital.nhs.uk/secure/RapidBoard.jspa?rapidView=1886" target="_blank">Jira board</a></li>
+              <li><a href="https://confluence.digital.nhs.uk/display/NL/Provisioning+Interface" target="_blank">Confluence</a></li>
+              <li><a href="https://miro.com/app/board/o9J_kvKmy0w=/" target="_blank">Miro</a></li>
+              <li><a href="rdtracker/index" target="_blank">R&D tracker</a></li>
+            </ul>
+
+        </div>
+        </div>
+      </div>
+
+      
 
 
-<p>Provisioning is split into two sections:</p>
-        <nav class="nhsuk-contents-list" role="navigation" aria-label="Pages in this guide">
-  <h2 class="nhsuk-u-visually-hidden">Provisioning</h2>
-  <ol class="nhsuk-contents-list__list">
-    <li class="nhsuk-contents-list__item">
-      <a class="nhsuk-contents-list__link" href="universalinterface/index">Universal interface</a> - which allows trusted parties to create and ammend NHS login accounts via an API.
-    </li>
-    <li class="nhsuk-contents-list__item">
-      <a class="nhsuk-contents-list__link" href="createaccount/index">Create account</a> - which allows a user to claim an NHS login account created through the above interface.
-    </li>
-  </ol>
-</nav>
-</div>
 
-    <div class="nhsuk-grid-column-one-quarter">
-        <ul>
-          <li><a href="https://jira.digital.nhs.uk/secure/RapidBoard.jspa?rapidView=1886" target="_blank">Jira board</a></li>
-          <li><a href="https://confluence.digital.nhs.uk/display/NL/Provisioning+Interface" target="_blank">Confluence</a></li>
-          <li><a href="https://miro.com/app/board/o9J_kvKmy0w=/" target="_blank">Miro</a></li>
-          <li><a href="rdtracker/index" target="_blank">R&D tracker</a></li>
-        </ul>
 
-  </div>
+
 {% endblock %}
