Journey rejig (needs review)

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -32,7 +32,31 @@
             <h3 class="nhsuk-card__heading">
               Discovery 2023
             </h3>
-            <a class="nhsuk-contents-list__link" href="universalinterface/index">Universal interface</a> - which allows trusted parties to create and ammend NHS login accounts via an API.
+
+            <h2>User journey 1</h2>
+            <p>Add errors in</p>
+
+            <h2>User journey 2</h2>
+            <p>
+              Allowing users to claim an NHS login account provisioned or uplifted by a GP.
+            </p>
+            <ol class="nhsuk-contents-list__list">
+              <li class="nhsuk-contents-list__item">
+                <a class="nhsuk-contents-list__link" href="discovery-2023/email/invite-new-account">New account set up email</a>
+              </li>
+              <li class="nhsuk-contents-list__item">
+                <a class="nhsuk-contents-list__link" href="discovery-2023/email/existing-account-uplift">Existing account uplift email </a>
+              </li>
+              <li class="nhsuk-contents-list__item">
+                <a class="nhsuk-contents-list__link" href="discovery-2023/email/existing-account-recovery">Existing account recovery email</a>
+              </li>
+            </ol>
+            <p class="nhsuk-u-margin-bottom-4"></p>
+            <ul>
+              <li><a href="https://nhsd-confluence.digital.nhs.uk/pages/viewpage.action?pageId=564757512" target="_blank">Confluence</a></li>
+              <li><a href="https://app.mural.co/invitation/mural/nhsdigital8118/1675178807706?sender=u6ebbd4fffc5f2b3022c14380&key=c4127b72-59f9-4a04-afe6-a59d177d3250" target="_blank">Mural service map</a></li>
+              <li><a href="https://app.mural.co/invitation/mural/nhsdigital8118/1677258706065?sender=u6ebbd4fffc5f2b3022c14380&key=8776c6f2-9ec7-49f9-8550-523cbd9c909a" target="_blank">Mural R&D</a></li>
+            </ul>
           </div>
         </div>
 
@@ -52,16 +76,17 @@
                 <a class="nhsuk-contents-list__link" href="createaccount/index">Create account</a> - which allows a user to claim an NHS login account created through the above interface.
               </li>
             </ol>
-          </nav>
-        </div>
-
-        <div class="nhsuk-grid-column-one-quarter">
+            <p class="nhsuk-u-margin-bottom-4"></p>
             <ul>
               <li><a href="https://jira.digital.nhs.uk/secure/RapidBoard.jspa?rapidView=1886" target="_blank">Jira board</a></li>
               <li><a href="https://confluence.digital.nhs.uk/display/NL/Provisioning+Interface" target="_blank">Confluence</a></li>
               <li><a href="https://miro.com/app/board/o9J_kvKmy0w=/" target="_blank">Miro</a></li>
               <li><a href="rdtracker/index" target="_blank">R&D tracker</a></li>
             </ul>
+          </nav>
+        </div>
+
+        <div class="nhsuk-grid-column-one-quarter">
 
         </div>
         </div>
