--- a/app/views/discovery-2023/create-account/otp.html
+++ b/app/views/discovery-2023/create-account/otp.html
@@ -29,23 +29,29 @@ Check your phone
     
         <h1>Check your phone</h1>
 
-        <p>Enter the 6 digit security code that we have sent to *******8209.</p>
+        <p>Enter the 6 digit security code that we have sent to <strong>•••••••8209</strong>.</p>
 
         <p>This is the phone number that is registered with your GP surgery.</p>
 
-       <div class="nhsuk-form-group">
+        <div class="nhsuk-form-group">
           <label class="nhsuk-label" for="securityCodes">
           Security code
           </label>
           <input class="nhsuk-input nhsuk-input--width-10" id="securityCodes" name="code" type="number" aria-describedby="securityCodes" autocomplete="off" pattern="[0-9]*" value="" style="margin-bottom: 8px;">
         </div>
 
-<a href="verification" role="button" draggable="false" class="nhsuk-button">
-  Continue
-</a>
+        <a href="confirm-my-details" role="button" draggable="false" class="nhsuk-button">
+          Continue
+        </a>
 
-      <p>If you do not recognise this phone number or do not have access to your phone, you will need to update your records with your GP.</p>
-</div>
+        <div class="nhsuk-inset-text">
+          <span class="nhsuk-u-visually-hidden">Information: </span>
+          <p>If you do not recognise this phone number or do not have access to your phone, you will need to update your records with your GP.</p>
+        </div>
+
+    </div>
+   
+  </div>
 
 {% endblock %}
 
