--- a/app/views/discovery-2023/email/existing-account-uplift.html
+++ b/app/views/discovery-2023/email/existing-account-uplift.html
@@ -12,25 +12,32 @@
         Invite to set up your NHS login
       </h1>
       
-      <p>Dear {{ data.UserFirstName or 'Alice' }} {{ data.UserLastName or 'Smith' }},</p>
-      <p>You have been invited to set up your NHS login. To do this, you will need to tell us your
+      <p>
+        Dear {{ data.UserFirstName or 'Alice' }} {{ data.UserLastName or 'Smith' }},
+      </p>
+      <p>
+        You have been invited to set up your NHS login. To do this, you will need to tell us your
+      </p>
 
       <p>
-      NHS login lets you access a variety of digital health and care websites and apps with just 1 username and password.
+        NHS login lets you access a variety of digital health and care websites and apps with just 1 username and password.
       </p>
 
       <p>Help with NHS login:</p>
-            <ul class="nhsuk-list nhsuk-list--bullet">
-            <li>To change your NHS login details and password or delete your NHS login if you no longer want to use it, visit: <a href="https://settings.login.nhs.uk/">https://settings.login.nhs.uk/</a></li>
-            <li>If you have technical issues, visit the NHS login help centre: <a href="https://help.login.nhs.uk/">https://help.login.nhs.uk/</a> </li>
-            
-            </ul>
+      <ul class="nhsuk-list nhsuk-list--bullet">
+        <li>
+          To change your NHS login details and password or delete your NHS login if you no longer want to use it, visit: <a href="https://settings.login.nhs.uk/">https://settings.login.nhs.uk/</a>
+        </li>
+        <li>
+          If you have technical issues, visit the NHS login help centre: <a href="https://help.login.nhs.uk/">https://help.login.nhs.uk/</a>
+        </li>
+      </ul>
 
       <p>This invite will expire in 7 days.</p>
       
       <p><a href="../existing-uplift/spinner" class="nhsuk-button">Set up your NHS login</a>
       
-        <div class="nhsuk-hint" id="example-with-hint-text-hint">Please do not reply to this email – this is an automated message</div>
+        <div class="nhsuk-hint" id="example-with-hint-text-hint">Please do not reply to this email - this is an automated message</div>
     </div>
   </div>
 
