--- a/app/views/index.html
+++ b/app/views/index.html
@@ -29,14 +29,14 @@
 
         <div class="nhsuk-card">
           <div class="nhsuk-card__content">
-            <h1 class="nhsuk-card__heading">
+            <h2 class="nhsuk-card__heading">
               Discovery 2023
-            </h1>
+            </h2>
 
-            <h2>User journey 1</h2>
+            <h3>User journey 1</h3>
             <p>Add errors in</p>
 
-            <h2>User journey 2</h2>
+            <h3>User journey 2</h3>
             <p>
               Allowing users to claim an NHS login account provisioned or uplifted by a GP.
             </p>
@@ -51,7 +51,7 @@
                 <a class="nhsuk-contents-list__link" href="discovery-2023/email/existing-account-recovery">Existing account recovery email</a>
               </li>
             </ol>
-            <hr class="nhsuk-section-break nhsuk-section-break--visible">
+            <hr class="nhsuk-section-break nhsuk-section-break--l nhsuk-section-break--visible">
             <ul>
               <li><a href="https://nhsd-confluence.digital.nhs.uk/pages/viewpage.action?pageId=564757512" target="_blank">Confluence</a></li>
               <li><a href="https://app.mural.co/invitation/mural/nhsdigital8118/1675178807706?sender=u6ebbd4fffc5f2b3022c14380&key=c4127b72-59f9-4a04-afe6-a59d177d3250" target="_blank">Mural service map</a></li>
@@ -76,7 +76,7 @@
                 <a class="nhsuk-contents-list__link" href="createaccount/index">Create account</a> - which allows a user to claim an NHS login account created through the above interface.
               </li>
             </ol>
-            <hr class="nhsuk-section-break nhsuk-section-break--visible">
+            <hr class="nhsuk-section-break nhsuk-section-break--l nhsuk-section-break--visible">
             <ul>
               <li><a href="https://jira.digital.nhs.uk/secure/RapidBoard.jspa?rapidView=1886" target="_blank">Jira board</a></li>
               <li><a href="https://confluence.digital.nhs.uk/display/NL/Provisioning+Interface" target="_blank">Confluence</a></li>
