--- a/app/views/discovery-2023/existing-uplift/spinner.html
+++ b/app/views/discovery-2023/existing-uplift/spinner.html
@@ -60,7 +60,7 @@
 
 <script>
   setTimeout(function(){
-    window.location.href='setup/otp';
+    window.location.href='otp';
 }, 2500);
 </script>
 
