Add account recovery link

--- a/app/views/discovery-2023/email/existing-account-recovery.html
+++ b/app/views/discovery-2023/email/existing-account-recovery.html
@@ -11,7 +11,7 @@ Account details reminder from NHS login
       <h1 class="nhsuk-fieldset__legend--l">
         Account details reminder from NHS login
       </h1>
-      
+
       <p class="nhsuk-body">
           You asked us to remind you of the email address used to create your existing NHS login account.
       </p>
@@ -31,7 +31,7 @@ Account details reminder from NHS login
 
       <!--<p>This invite will expire in 7 days.</p>-->
       
-      <p><a href="../spinner" class="nhsuk-button">Recover NHS login account</a>
+      <p><a href="https://prototype-nhs-login.herokuapp.com/nhslogin/recovery/live/enter-old-mobile-number" class="nhsuk-button">Recover NHS login account</a>
       
         <div class="nhsuk-hint" id="example-with-hint-text-hint">Please do not reply to this email - this is an automated message</div>
     </div>
