--- a/app/views/discovery-2023/email/existing-account-recovery.html
+++ b/app/views/discovery-2023/email/existing-account-recovery.html
@@ -8,15 +8,28 @@ Account details reminder from NHS login
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
 
-      <h1 class="nhsuk-fieldset__legend--l">
+      <h1 class="nhsuk-heading-l">
         Account details reminder from NHS login
       </h1>
 
       <p class="nhsuk-body">
-          You asked us to remind you of the email address used to create your existing NHS login account.
+        Your GP asked us to remind you of the email address used to create your existing NHS login account.
       </p>
+
+      <h2 class="nhsuk-heading-m">
+        Don't remember your password?
+      </h2>
+
       <p class="nhsuk-body">
-          To access your existing account sign in using this email address.
+        If you cannot remember your password you can <a href="https://prototype-nhs-login.herokuapp.com/nhslogin/login/check-your-email">reset it</a>.
+      </p>
+
+      <h2 class="nhsuk-heading-m">
+        I do not have access to an old mobile number
+      </h2>
+      
+      <p class="nhsuk-body">
+        If you do not have access to your mobile phone, <a href="https://prototype-nhs-login.herokuapp.com/nhslogin/login/login-enter-OTP#">you can change your mobile phone securely</a>.
       </p>
 
       <p>Help with NHS login:</p>
