--- a/app/views/discovery-2023/email/invite-new-account.html
+++ b/app/views/discovery-2023/email/invite-new-account.html
@@ -8,46 +8,50 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
 
-      <h1 class="nhsuk-fieldset__legend--l">
+      <h1 class="nhsuk-heading-l">
         Invite to set up your NHS login
       </h1>
       
-      <p>
+      <p class="nhsuk-body">
         Dear {{ data.UserFirstName or 'Alice' }} {{ data.UserLastName or 'Smith' }},
       </p>
-      <p>
+
+      <p class="nhsuk-body">
         This is an invitation to set up your NHS login.
       </p>
-      <p>
+      
+      <p class="nhsuk-body">
         Your account allows you to access a range of health and care websites and apps with one set of login details.
       </p>
 
-      <h2 class="nhsuk-fieldset__legend--m">
+      <h2 class="nhsuk-heading-m">
         To set up your account
       </h2>
 
-      <p>
+      <p class="nhsuk-body">
         We need to send a 6 digit security code to the mobile phone number you used to register with your GP.
       </p>
 
-      <p>You will also need to confirm your:</p>
-      <ul class="nhsuk-list nhsuk-list--bullet">
-        <li>
-          name
-        </li>
-        <li>
-          date of birth
-        </li>
-        <li>
-          NHS number
-        </li>
-      </ul>
+      <p class="nhsuk-body">You will also need to confirm your:
+        <ul class="nhsuk-list nhsuk-list--bullet">
+          <li>
+            name
+          </li>
+          <li>
+            date of birth
+          </li>
+          <li>
+            NHS number
+          </li>
+        </ul>
+      </p>
 
-      <p>This invitation will expire on 20 March 2023.</p>
+      <p class="nhsuk-body">This invitation will expire on 20 March 2023.</p>
 
       <a href="../create-account/spinner" class="nhsuk-button">Set up your NHS login</a>
       
-        <div class="nhsuk-hint" id="example-with-hint-text-hint">Please do not reply to this email - this is an automated message</div>
+      <div class="nhsuk-hint" id="example-with-hint-text-hint">Please do not reply to this email - this is an automated message</div>
+
     </div>
   </div>
 
