Small content email edits

--- a/app/views/discovery-2023/email/existing-account-recovery.html
+++ b/app/views/discovery-2023/email/existing-account-recovery.html
@@ -27,7 +27,7 @@ Account details reminder from NHS login
       <h2 class="nhsuk-heading-m">
         I do not have access to an old mobile number
       </h2>
-      
+
       <p class="nhsuk-body">
         If you do not have access to your mobile phone, <a href="https://prototype-nhs-login.herokuapp.com/nhslogin/login/login-enter-OTP#">you can change your mobile phone securely</a>.
       </p>
@@ -42,9 +42,8 @@ Account details reminder from NHS login
               </li>
             </ul>
 
-      <!--<p>This invite will expire in 7 days.</p>-->
+      <!--<p class="nhsuk-body">This invitation will expire on 20 March 2023.</p>-->
       
-      <p><a href="https://prototype-nhs-login.herokuapp.com/nhslogin/recovery/live/enter-old-mobile-number" class="nhsuk-button">Recover NHS login account</a>
       
         <div class="nhsuk-hint" id="example-with-hint-text-hint">Please do not reply to this email - this is an automated message</div>
     </div>
