--- a/app/views/discovery-2023/email/existing-account-uplift.html
+++ b/app/views/discovery-2023/email/existing-account-uplift.html
@@ -11,10 +11,6 @@ Finish settingt up your NHS login
       <p><h1 class="nhsuk-heading-l">
         Finish setting up your NHS login
       </h1>
-      
-      <p class="nhsuk-body">
-        Dear {{ data.UserFirstName or 'Alice' }} {{ data.UserLastName or 'Smith' }},
-      </p>
 
       <p class="nhsuk-body">
         Your GP has connected you to your record and once you finish setting up yout account you should be able to access more features.
@@ -28,6 +24,10 @@ Finish settingt up your NHS login
         We need to send a 6 digit security code to the mobile phone number you used to register with your GP.
       </p>
 
+      <p class="nhsuk-body">This invitation will expire on 20 March 2023.</p>
+      
+      <a href="../existing-uplift/spinner" class="nhsuk-button">Finish setting up your NHS login</a>
+
       <p class="nhsuk-body">Help with NHS login:
         <ul class="nhsuk-list nhsuk-list--bullet">
           <li>
@@ -38,10 +38,6 @@ Finish settingt up your NHS login
           </li>
         </ul>
       </p>
-
-      <p class="nhsuk-body">This invite will expire in 7 days.</p>
-      
-      <a href="../existing-uplift/spinner" class="nhsuk-button">Finish setting up your NHS login</a>
       
       <div class="nhsuk-hint" id="example-with-hint-text-hint">Please do not reply to this email - this is an automated message</div>
 
