--- a/app/views/discovery-2023/email/existing-account-uplift.html
+++ b/app/views/discovery-2023/email/existing-account-uplift.html
@@ -8,7 +8,7 @@ Finish settingt up your NHS login
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
 
-      <p><h1 class="nhsuk-heading-l">
+      <h1 class="nhsuk-heading-l">
         Finish setting up your NHS login
       </h1>
 
