--- a/app/views/discovery-2023/create-account/passwordset.html
+++ b/app/views/discovery-2023/create-account/passwordset.html
@@ -21,7 +21,13 @@ Create a password
 
 
 
-            <p>Your password must have:<ul></span><li>8 characters or more</li><li>1 capital letter or more</li></ul></p>
+            <p>Your password must have:
+              <ul>
+                <li>have 8 characters or more</li>
+                <li>have 1 UPPERCASE letter or more</li>
+                <li>not start or end with a blank space</li>
+              </ul>
+            </p>
 
           <label class="nhsuk-label" for="input-with-hint-text">
             Create a password
