--- a/app/views/discovery-2023/existing-uplift/confirm-my-details.html
+++ b/app/views/discovery-2023/existing-uplift/confirm-my-details.html
@@ -48,7 +48,7 @@ What is your date of birth?
                 NHS number
               </td>
               <td class="nhsuk-summary-list__value">
-                {{ data['enterNHSNumber'] or '*** *** 3456' }}
+                {{ data['enterNHSNumber'] or '••• ••• 3456' }}
               </td>
           
             </tr>
