--- a/app/views/discovery-2023/existing-uplift/otp.html
+++ b/app/views/discovery-2023/existing-uplift/otp.html
@@ -33,10 +33,27 @@ Check your phone
 
         <p>This is the phone number that is registered with your GP surgery.</p>
 
+        <details class="nhsuk-details">
+          <summary class="nhsuk-details__summary">
+            <span class="nhsuk-details__summary-text">
+              Not received your security code?
+            </span>
+          </summary>
+          <div class="nhsuk-details__text">
+            <p>When we are really busy, it may take a bit longer for your code to arrive.</p>
+            <p class="nhsuk-body">
+              <a href="login-enter-OTP?resendOTP=true">Send the security code again</a>.
+            </p>
+          </div>
+        </details>
+
         <div class="nhsuk-form-group">
           <label class="nhsuk-label" for="securityCodes">
           Security code
           </label>
+          <div class="nhsuk-hint" id="phoneOTPHint">
+            The code is 6 digits
+          </div>
           <input class="nhsuk-input nhsuk-input--width-10" id="securityCodes" name="code" type="number" aria-describedby="securityCodes" autocomplete="off" pattern="[0-9]*" value="" style="margin-bottom: 8px;">
         </div>
 
