Tidy styling on email and OTP

--- a/app/views/discovery-2023/create-account/otp.html
+++ b/app/views/discovery-2023/create-account/otp.html
@@ -46,6 +46,7 @@ Check your phone
             </p>
           </div>
         </details>
+        <div class="nhsuk-u-padding-bottom-4"></div>
 
         <div class="nhsuk-form-group">
           <label class="nhsuk-label" for="securityCodes">
