--- a/app/views/discovery-2023/email/existing-account-recovery.html
+++ b/app/views/discovery-2023/email/existing-account-recovery.html
@@ -23,7 +23,7 @@ Account details reminder from NHS login
         We have sent this email to the address you used to create your account. 
       </p>
 
-      <h2>Help with NHS login:</h2>
+      <h2 class="nhsuk-heading-m">Help with NHS login</h2>
       <p>
         To change your NHS login details and password or delete your NHS login if you no longer want to use it, visit: <a href="https://settings.login.nhs.uk/">https://settings.login.nhs.uk/</a>
       </p>
