--- a/app/views/discovery-2023/email/existing-account-uplift.html
+++ b/app/views/discovery-2023/email/existing-account-uplift.html
@@ -67,7 +67,7 @@ Finish settingt up your NHS login
       <a href="../existing-uplift/spinner" class="nhsuk-button">Finish setting up your NHS login</a>
       <p><a href="https://help.login.nhs.uk/">https://settings.login.nhs.uk/</a></p>
 
-      <h2 class="nhsuk-body">Help with NHS login</h2>
+      <h2 class="nhsuk-heading-m">Help with NHS login</h2>
       <p>
         <ul class="nhsuk-list nhsuk-list--bullet">
           <li>
