--- a/app/views/discovery-2023/existing-uplift/otp.html
+++ b/app/views/discovery-2023/existing-uplift/otp.html
@@ -46,6 +46,7 @@ Check your phone
             </p>
           </div>
         </details>
+        <div class="nhsuk-u-padding-bottom-4"></div>
 
         <div class="nhsuk-form-group">
           <label class="nhsuk-label" for="securityCodes">
