--- a/app/views/discovery-2023/email/existing-account-uplift.html
+++ b/app/views/discovery-2023/email/existing-account-uplift.html
@@ -64,8 +64,8 @@ Finish settingt up your NHS login
 
       <p class="nhsuk-body">This invitation will expire on 20 March 2023.</p>
       
-      <a href="../existing-uplift/spinner" class="nhsuk-button">Finish setting up your NHS login</a>
-      <p><a href="https://help.login.nhs.uk/">https://settings.login.nhs.uk/</a></p>
+      <a href="../existing-uplift/spinner" target="_blank" class="nhsuk-button">Finish setting up your NHS login</a>
+      <p><a href="../existing-uplift/spinner" target="_blank">https://settings.login.nhs.uk/</a></p>
 
       <h2 class="nhsuk-heading-m">Help with NHS login</h2>
       <p>
