Journeys are working and happy again
Need to review adding steps page and content further

--- a/app/views/discovery-2023/create-account/confirm-my-details.html
+++ b/app/views/discovery-2023/create-account/confirm-my-details.html
@@ -8,7 +8,7 @@ What is your date of birth?
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds nhsuk-u-margin-bottom-4">
 
-    <form method="post" action="passwordset">
+    <form method="post" action="password-set">
 
         <fieldset class="nhsuk-fieldset">
           <legend class="nhsuk-fieldset__legend">
