--- a/app/views/discovery-2023/create-account/otp.html
+++ b/app/views/discovery-2023/create-account/otp.html
@@ -27,11 +27,11 @@ Check your phone
   
     <div class="nhsuk-grid-column-two-thirds">
     
-        <h1>Check your phone</h1>
+        <h1 class="nhsuk-heading-l">Check your phone</h1>
 
-        <p>Enter the 6 digit security code that we have sent to <strong>•••••••8209</strong>.</p>
+        <p class="nhsuk-body">Enter the 6 digit security code that we have sent to <strong>•••••••8209</strong>.</p>
 
-        <p>This is the phone number that is registered with your GP surgery.</p>
+        <p class="nhsuk-body">This is the phone number that is registered with your GP surgery.</p>
 
         <details class="nhsuk-details">
           <summary class="nhsuk-details__summary">
