--- a/app/views/discovery-2023/create-account/password-set.html
+++ b/app/views/discovery-2023/create-account/password-set.html
@@ -10,22 +10,21 @@ Create a password
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-{#       {{ backLink({
-        "href": "enter-email",
-        "text": "Back to: Enter your email"
-      }) }} #}
-
-      <h1>
+      <h1 class="nhsuk-heading-l">
         Create a password
       </h1>
 
+      <p class="nhsuk-body">Your password must have:
+        <ul>
+          <li>have 8 characters or more</li>
+          <li>have 1 UPPERCASE letter or more</li>
+          <li>not start or end with a blank space</li>
+        </ul>
+      </p>
 
-
-            <p>Your password must have:<ul></span><li>8 characters or more</li><li>1 capital letter or more</li></ul></p>
-
-          <label class="nhsuk-label" for="input-with-hint-text">
+      <label class="nhsuk-label" for="input-with-hint-text">
             Create a password
-          </label>
+      </label>
         <input autocomplete="on" class="nhsuk-input nhsuk-input--width-20" data-toggle-password-field id="revealPassword" name="revealPassword" type="password" aria-describedby="password reveal">
           <div style="display: inline; position: relative;">
             <button type="button" aria-pressed="false" class="button-link form__toggle-password" data-toggle-password style="border: none; position: absolute; right: 10px; top: -5px;">
@@ -45,9 +44,9 @@ Create a password
             </div>          
           </div>
 
-          <h2 style="font-size:20px; margin:1.5em 0 0;line-height: 20px">Agree to our terms of use​</h2>
-          <p class="small" style="margin-top: 16px;">We will collect and save your information securely. We will not share your personal information without your consent.</p>
-          <p class="small">By continuing you confirm that you agree to our <a href="/legal/privacy">privacy notice</a> and <a href="/legal/terms">terms and conditions.</a></p>    
+          <h2 style="font-size:20px; margin:1.5em 0 0;line-height: 20px" class="nhsuk-heading-m">Agree to our terms of use​</h2>
+          <p class="small nhsuk-body" style="margin-top: 16px;">We will collect and save your information securely. We will not share your personal information without your consent.</p>
+          <p class="small nhsuk-body">By continuing you confirm that you agree to our <a href="/legal/privacy">privacy notice</a> and <a href="/legal/terms">terms and conditions.</a></p>    
 
       {# <form action="{{ thisPage }}" method="post"> #}
 
@@ -58,7 +57,7 @@ Create a password
 
         {# <button class="nhsuk-button full-width" >Continue</button> #}
 
-                <a href="success" class="nhsuk-button">Continue</a>
+                <a href="spinner-confirm" class="nhsuk-button">Continue</a>
 
 {#       </form> #}
       
