--- a/app/views/discovery-2023/existing-uplift/login-enter-password.html
+++ b/app/views/discovery-2023/existing-uplift/login-enter-password.html
@@ -1,26 +1,17 @@
-{% extends 'layouts/layout.html' %}
+<!-- Extends the layout from /views/layout.html -->
+{% extends 'layout.html' %}
 
 {% block pageTitle %}
   Enter your password
 {% endblock %}
 
 {% block outerContent %}
-  {{ backLink({
-    "href": "/nhslogin/enter-email",
-    "text": "Back to: Enter your email address",
-    "classes": "nhsuk-u-margin-top-4 nhsuk-u-margin-bottom-0"
-  }) }}
 {% endblock %}
 
 {% block content %}
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
-      {% if data.p5 === 'fail' %}
-      {% elif data.device === 'unknown' %}
-      <form action="login-enter-OTP" autocomplete="on" method="post">
-      {% else %}
-      <form action="auth" autocomplete="on" method="post">
-      {% endif %}
+      <form action="confirm-my-details" autocomplete="on" method="post">
         <fieldset class="nhsuk-fieldset">
           <legend class="nhsuk-fieldset__legend">
             <h1 class="nhsuk-heading-l">
