--- a/app/views/index.html
+++ b/app/views/index.html
@@ -23,7 +23,7 @@
 <!-- More info and code for the page layout can be found at https://beta.nhs.uk/service-manual/styles-components-patterns/layout -->
 {% block content %}
   <div class="nhsuk-grid-row">
-      <h1>Provisioning</h1>
+      <h1>Provisioning API</h1>
 
       <div class="nhsuk-grid-column-three-quarters">
 
@@ -33,10 +33,10 @@
               Discovery 2023
             </h2>
 
-            <h3>User journey 1</h3>
+            <h3>GP checks</h3>
             <p>Add errors in</p>
 
-            <h3>User journey 2</h3>
+            <h3>User journey</h3>
             <p>
               Allowing users to claim an NHS login account provisioned or uplifted by a GP.
             </p>
