--- a/app/views/discovery-2023/create-account/spinner-confirm.html
+++ b/app/views/discovery-2023/create-account/spinner-confirm.html
@@ -9,7 +9,7 @@
 {% block content %}
   <div class="nhsuk-grid-row">
       <div class="nhsuk-width-container">
-         <h1 class="nhsuk-heading-l">Getting your invite</h1>
+         <h1 class="nhsuk-heading-l">Confirming your details</h1>
      
       <form action="auth" method="post">
         <section class="loading-container" id="gp-connect-0" style="display:block; min-height: 16em;">
@@ -60,7 +60,7 @@
 
 <script>
   setTimeout(function(){
-    window.location.href='otp';
+    window.location.href='success';
 }, 2500);
 </script>
 
