--- a/app/views/discovery-2023/create-account/success.html
+++ b/app/views/discovery-2023/create-account/success.html
@@ -12,21 +12,59 @@ You now have an NHS login
   
     <div class="nhsuk-grid-column-two-thirds">
     
-        <h1>You now have an NHS login</h1>
-      
-<p>
-You can use your NHS login to access a variety of digital health and care websites and apps.
-</p>
+        <h1 class="nhsuk-heading-l">You now have an NHS login</h1>
 
-<div class="nhsuk-action-link">
-  <a class="nhsuk-action-link__link" href="https://www.nhs.uk/using-the-nhs/nhs-services/nhs-login/#">
-    <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
-      <path d="M0 0h24v24H0z" fill="none"></path>
-      <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
-    </svg>
-    <span class="nhsuk-action-link__text">Where you can use your NHS login</span>
-  </a>
-</div>
+        <p>
+          You have passed our checks.
+        </p>
+
+        <h2 class="nhsuk-heading-m">
+          Download the NHS App, or go to the NHS website and log in to access their features
+        </h2>
+
+        <p class="nhsuk-body">This means you can do things like: 
+          <ul class="nhsuk-list nhsuk-list--bullet">
+            <li>
+              view your GP health record 
+            </li>
+            <li>
+              manage appointments 
+            </li>
+            <li>
+              order repeat prescriptions 
+            </li>
+            <li>
+              download your NHS Covid Pass for travel abroad 
+            </li>          
+          </ul>
+        </p>
+
+        <div class="nhsuk-action-link">
+          <a class="nhsuk-action-link__link" href="https://www.nhs.uk/using-the-nhs/nhs-services/nhs-login/#">
+            <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
+              <path d="M0 0h24v24H0z" fill="none"></path>
+              <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
+            </svg>
+            <span class="nhsuk-action-link__text">Find out more about the NHS App</span>
+          </a>
+        </div>
+
+        <h2 class="nhsuk-heading-m">
+          Other digital health and care services
+        </h2>
+        <p>
+          You can also use your NHS login to access lots of other digital health and care services that are commissioned by the NHS.
+        </p>
+
+        <div class="nhsuk-action-link">
+          <a class="nhsuk-action-link__link" href="https://www.nhs.uk/using-the-nhs/nhs-services/nhs-login/#">
+            <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
+              <path d="M0 0h24v24H0z" fill="none"></path>
+              <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
+            </svg>
+            <span class="nhsuk-action-link__text">Where you can use your NHS login</span>
+          </a>
+        </div>
 
 
 </div>
