--- a/app/views/discovery-2023/email/invite-new-account.html
+++ b/app/views/discovery-2023/email/invite-new-account.html
@@ -48,8 +48,8 @@
 
       <p class="nhsuk-body">This invitation will expire on 20 March 2023.</p>
 
-      <a href="../create-account/spinner" target="_blank" class="nhsuk-button">Set up your NHS login</a>
-      <p><a href="../create-account/spinner" target="_blank">https://settings.login.nhs.uk/</a></p>
+      <a href="../create-account/spinner-set-up" target="_blank" class="nhsuk-button">Set up your NHS login</a>
+      <p><a href="../create-account/spinner-set-up" target="_blank">https://settings.login.nhs.uk/</a></p>
       
       <div class="nhsuk-hint" id="example-with-hint-text-hint">Please do not reply to this email - this is an automated message</div>
 
