--- a/app/views/discovery-2023/existing-uplift/otp.html
+++ b/app/views/discovery-2023/existing-uplift/otp.html
@@ -27,11 +27,11 @@ Check your phone
   
     <div class="nhsuk-grid-column-two-thirds">
     
-        <h1>Check your phone</h1>
+        <h1 class="nhsuk-heading-l">Check your phone</h1>
 
-        <p>Enter the 6 digit security code that we have sent to <strong>•••••••8209</strong>.</p>
+        <p class="nhsuk-body">Enter the 6 digit security code that we have sent to <strong>•••••••8209</strong>.</p>
 
-        <p>This is the phone number that is registered with your GP surgery.</p>
+        <p class="nhsuk-body">This is the phone number that is registered with your GP surgery.</p>
 
         <details class="nhsuk-details">
           <summary class="nhsuk-details__summary">
@@ -58,7 +58,7 @@ Check your phone
           <input class="nhsuk-input nhsuk-input--width-10" id="securityCodes" name="code" type="number" aria-describedby="securityCodes" autocomplete="off" pattern="[0-9]*" value="" style="margin-bottom: 8px;">
         </div>
 
-        <a href="confirm-my-details" role="button" draggable="false" class="nhsuk-button">
+        <a href="login-enter-password" role="button" draggable="false" class="nhsuk-button">
           Continue
         </a>
 
