--- a/app/views/discovery-2023/email/existing-account-uplift.html
+++ b/app/views/discovery-2023/email/existing-account-uplift.html
@@ -20,7 +20,7 @@ Finish settingt up your NHS login
         Your GP has linked your NHS record to your account.
       </p>
       <p>
-        Once you've finished setting up your account you will have full access to services that use NHS login. 
+        When you've finished setting up your account you will have full access to services that use NHS login.
       </p>
 
       <p class="nhsuk-body">This means you can do things like: 
