--- a/app/views/discovery-2023/email/success-new account.html
+++ b/app/views/discovery-2023/email/success-new account.html
@@ -8,25 +8,47 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
 
-      <p><h1 class="nhsuk-fieldset__legend--l">
+      <h1 class="nhsuk-fieldset__legend--l">
        You now have an NHS login
       </h1>
-      
-      <p>Dear {{ data.UserFirstName or 'Alice' }} {{ data.UserLastName or 'Smith' }},</p>
-      
-      <p>You have successfully set up your NHS login.</p>
 
-      <p>You can use your NHS login to access a variety of digital health and care websites and apps.</p>
-            
-      <div class="nhsuk-action-link">
-        <a class="nhsuk-action-link__link" href="https://www.nhs.uk/using-the-nhs/nhs-services/nhs-login/#">
-          <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
-            <path d="M0 0h24v24H0z" fill="none"></path>
-            <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
-          </svg>
-          <span class="nhsuk-action-link__text">Where you can use your NHS login</span>
-        </a>
-      </div>
+      <p>
+        You have passed our checks and can now use your NHS login to access the NHS App, or NHS website and do things like:
+      </p>
+
+      <p class="nhsuk-body">
+        <ul class="nhsuk-list nhsuk-list--bullet">
+          <li>
+            view your GP health record 
+          </li>
+          <li>
+            manage appointments 
+          </li>
+          <li>
+            order repeat prescriptions 
+          </li>
+          <li>
+            download your NHS Covid Pass for travel abroad 
+          </li>          
+        </ul>
+      </p>
+      <p>
+        To find out more about the websites and apps you can access with NHS login, visit: <a class="https://www.nhs.uk/nhs-services/online-services/nhs-login/websites-and-apps-you-can-access-with-nhs-login/">https://www.nhs.uk/nhs-services/online-services/nhs-login/websites-and-apps-you-can-access-with-nhs-login/</a>
+      </p>
+
+      <h2 class="nhsuk-heading-m">Help with NHS login</h2>
+      <p>
+        <ul class="nhsuk-list nhsuk-list--bullet">
+          <li>
+            To change your NHS login details and password or delete your NHS login if you no longer want to use it, visit: <a href="https://settings.login.nhs.uk/">https://settings.login.nhs.uk/</a>
+          </li>
+          <li>
+            If you have technical issues, visit the NHS login help centre: <a href="https://help.login.nhs.uk/">https://help.login.nhs.uk/</a>
+          </li>
+        </ul>
+      </p>
+      
+      <div class="nhsuk-hint" id="example-with-hint-text-hint">Please do not reply to this email - this is an automated message</div>
       
     </div>
   </div>
