--- a/app/views/discovery-2023/existing-uplift/success.html
+++ b/app/views/discovery-2023/existing-uplift/success.html
@@ -2,7 +2,7 @@
 
 
 {% block pageTitle %}
-You now have an NHS login
+You have set up an NHS login
 {% endblock %}
 
 
@@ -12,17 +12,13 @@ You now have an NHS login
   
     <div class="nhsuk-grid-column-two-thirds">
     
-        <h1 class="nhsuk-heading-l">You now have an NHS login</h1>
+        <h1 class="nhsuk-heading-l">You have set up an NHS login</h1>
 
         <p>
-          You have passed our checks.
+          You have passed our checks and can now use your NHS login to access the NHS App, or NHS website and do things like:
         </p>
 
-        <h2 class="nhsuk-heading-m">
-          Download the NHS App, or go to the NHS website and log in to access their features
-        </h2>
-
-        <p class="nhsuk-body">This means you can do things like: 
+        <p class="nhsuk-body">
           <ul class="nhsuk-list nhsuk-list--bullet">
             <li>
               view your GP health record 
@@ -40,7 +36,7 @@ You now have an NHS login
         </p>
 
         <div class="nhsuk-action-link">
-          <a class="nhsuk-action-link__link" href="https://www.nhs.uk/using-the-nhs/nhs-services/nhs-login/#">
+          <a class="nhsuk-action-link__link" href="https://www.nhs.uk/nhs-app/account/">
             <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
               <path d="M0 0h24v24H0z" fill="none"></path>
               <path d="M12 2a10 10 0 0 0-9.95 9h11.64L9.74 7.05a1 1 0 0 1 1.41-1.41l5.66 5.65a1 1 0 0 1 0 1.42l-5.66 5.65a1 1 0 0 1-1.41 0 1 1 0 0 1 0-1.41L13.69 13H2.05A10 10 0 1 0 12 2z"></path>
